projects/vb6parse/snapshots/syntax/statements/control_flow/jump/label_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/jump.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LabelStatement
      children:
        - kind: Identifier
          text: MyLabel
        - kind: ColonOperator
          text: ":"
